cha-pre-live-flux2/cha-eks-5b/icis-services/icis-devops-dashboard/namespace-icis-devops-dashboard.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: icis-devops-dashboard
  name: icis-devops-dashboard
