cha-pre-live-flux2/cha-eks-5b/icis-services/icis-devops-dashboard/network-policy-apps.yaml
####################################################
## Allow ingress from icis-devops-dashboard and icis-ingress ##

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-ingress-icis-devops-dashboard
  namespace: icis-devops-dashboard
spec:
  podSelector: {}
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: icis-devops-dashboard
    - namespaceSelector:
        matchLabels:
          name: icis-ingress

###################################
## Allow egress from icis-devops-dashboard ##

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-icis-devops-dashboard
  namespace: icis-devops-dashboard
spec:
  podSelector: {}
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          name: icis-devops-dashboard

#########################################
## Allow external http traffic egress  ##

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-http-external
  namespace: icis-devops-dashboard
spec:
  podSelector: {}
  egress:
  - ports:
    - port: 443
      protocol: TCP
    - port: 80
      protocol: TCP

#####################
## ICIS monitoring ##

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-icis-monitoring
  namespace: icis-devops-dashboard
spec:
  podSelector: {}
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: prometheus
      namespaceSelector:
        matchLabels:
          name: icis-monitoring

#########################################
## Allow Postgres egress  ##
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-postgres-server
  namespace: icis-devops-dashboard
spec:
  podSelector: {}
  egress:
  - ports:
    - port: 5432
      protocol: TCP
